tests/paczka1/small_fuzzy/87831003.err
Error in line 5: IPNr A125 20,4
Error in line 7: IPNr S919 10,6
